force-app/main/default/objects/Sak__c/Sak__c.object-meta.xml
<CustomObject>
    <label>Sak</label>
    <nameField>
        <label>Sak</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saker</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>