force-app/main/default/objects/Sak__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Saksområde</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assets &amp; KM</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Ledelse &amp; Prosessforbedring</fullName>
            </value>
            <value>
                <fullName>People &amp; Kompetanse</fullName>
            </value>
            <value>
                <fullName>Rekruttering</fullName>
            </value>
            <value>
                <fullName>Salg</fullName>
            </value>
            <value>
                <fullName>Tjenesteutvikling/Profilering</fullName>
            </value>
            <value>
                <fullName>Strategisk bemanning</fullName>
            </value>
            <value>
                <fullName>Annet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>