force-app/main/default/objects/Sak__c/fields/Communication_mode__c.field-meta.xml
<CustomField>
    <fullName>Communication_mode__c</fullName>
    <label>Kommunikasjonstiltak</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>