force-app/main/default/objects/Sak__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Ferdig dato</label>
    <type>Date</type>
</CustomField>