force-app/main/default/objects/Sak__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Vedtak</label>
    <type>TextArea</type>
</CustomField>