force-app/main/default/objects/Sak__c/fields/Decision_date__c.field-meta.xml
<CustomField>
    <fullName>Decision_date__c</fullName>
    <label>Vedtaksdato</label>
    <type>Date</type>
</CustomField>