force-app/main/default/objects/Sak__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Saksdetaljer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>