force-app/main/default/objects/Sak__c/fields/Excluded_from_public_report__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_public_report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is checked to prevent viewing outside core leader team, ref Shareing rule. DO NOT DELETE!</description>
    <inlineHelpText>Krysses av for å hindre at saken er synlig for andre enn sentral ledergruppe</inlineHelpText>
    <label>Unntatt fra public rapport</label>
    <type>Checkbox</type>
</CustomField>