force-app/main/default/objects/Sak__c/fields/Kontekst__c.field-meta.xml
<CustomField>
    <fullName>Kontekst__c</fullName>
    <label>Kontekst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operasjonelt</fullName>
            </value>
            <value>
                <fullName>Strategisk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>