force-app/main/default/objects/Sak__c/fields/My_case__c.field-meta.xml
<CustomField>
    <fullName>My_case__c</fullName>
    <formula>if( $User.Id  = Responsible__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min sak</label>
    <type>Checkbox</type>
</CustomField>