force-app/main/default/objects/Sak__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ansvarlig</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Business_Unit__c</field>
            <operation>equals</operation>
            <value>APPS</value>
        </filterItems>
        <filterItems>
            <field>User.Management__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Saker</relationshipName>
    <type>Lookup</type>
</CustomField>