force-app/main/default/objects/Sak__c/fields/Sensitiv__c.field-meta.xml
<CustomField>
    <fullName>Sensitiv__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For å markere at en sak er sensitiv. Saken blir ikke sendt med i rapport til utvidet lederteam</description>
    <inlineHelpText>Saken blir ikke sendt med i rapport til utvidet lederteam når den er markert som Sensitiv</inlineHelpText>
    <label>Sensitive</label>
    <type>Checkbox</type>
</CustomField>