force-app/main/default/objects/Sak__c/fields/Varighet__c.field-meta.xml
<CustomField>
    <fullName>Varighet__c</fullName>
    <label>Varighet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Korttid</fullName>
            </value>
            <value>
                <fullName>Langtid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>