force-app/main/default/objects/Sak__c/validationRules/Saker_Vedtaksdato_required_when_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Saker_Vedtaksdato_required_when_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Ferdig behandlet&quot;) &amp;&amp;
ISBLANK( Decision_date__c )</errorConditionFormula>
    <errorMessage>Vedtaksdato må fylles inn når status settes til Ferdig behandlet</errorMessage>
</ValidationRule>