force-app/main/default/objects/Sak__c/listViews/Tittel_og_konklusjon.listView-meta.xml
<ListView>
    <fullName>Tittel_og_konklusjon</fullName>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <columns>Conclusion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>2 Closed</value>
    </filters>
    <label>*Sak og konklusjon</label>
</ListView>