force-app/main/default/objects/Sak__c/listViews/X0_Waiting.listView-meta.xml
<ListView>
    <fullName>X0_Waiting</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Responsible__c</columns>
    <columns>Case_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>0 Waiting</value>
    </filters>
    <label>0 Waiting</label>
</ListView>