force-app/main/default/objects/Sak__c/listViews/X2a_Mine_saker.listView-meta.xml
<ListView>
    <fullName>X2a_Mine_saker</fullName>
    <columns>NAME</columns>
    <columns>Kontekst__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Case_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>0 Waiting,1 Decision,2 Closed,3 Abandoned</value>
    </filters>
    <label>Mine saker</label>
</ListView>