force-app/main/default/objects/Sak__c/listViews/X5_Abandoned.listView-meta.xml
<ListView>
    <fullName>X5_Abandoned</fullName>
    <columns>Completed_Date__c</columns>
    <columns>NAME</columns>
    <columns>Conclusion__c</columns>
    <columns>Responsible__c</columns>
    <columns>Case_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>3 Abandoned</value>
    </filters>
    <label>3 Abandoned</label>
</ListView>